// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current account reducers SET_CURRENT_SUBSCRIPTION should set the credit card (initial state). 1`] = `
Immutable.Map {
  "settings": Immutable.List [],
  "_internal": Immutable.Map {
    "loading": Immutable.Map {},
  },
  "current_subscription": Immutable.Map {
    "plan": "basic-usd-1",
    "status": "active",
  },
}
`;

exports[`current account reducers SET_CURRENT_SUBSCRIPTION should set the credit card and override the previous one. 1`] = `
Immutable.Map {
  "settings": Immutable.List [],
  "_internal": Immutable.Map {
    "loading": Immutable.Map {},
  },
  "current_subscription": Object {
    "plan": "advanced-usd-2",
    "staus": "past_due",
  },
}
`;

exports[`current account reducers update account 1`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "updateAccount": true,
    },
  },
  "settings": Array [],
}
`;

exports[`current account reducers update account 2`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "updateAccount": false,
    },
  },
  "current_subscription": undefined,
  "settings": Array [
    Object {
      "id": 10,
    },
  ],
}
`;

exports[`current account reducers update account 3`] = `
Object {
  "_internal": Object {
    "loading": Object {
      "updateAccount": false,
    },
  },
  "settings": Array [],
}
`;

exports[`current account reducers update account owner 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "settings": Array [],
  "user_id": 1,
}
`;

exports[`current account reducers update setting 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "settings": Array [
    Object {
      "hello": "world",
    },
  ],
}
`;

exports[`current account reducers update setting 2`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "settings": Array [
    Object {
      "hello": "world",
      "id": 1,
    },
  ],
}
`;

exports[`current account reducers update subscription with an existing subscription 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "current_subscription": Object {
    "plan": "basic-monthly-usd-2",
  },
  "settings": Array [],
}
`;

exports[`current account reducers update subscription without any existing subscription 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "current_subscription": Object {
    "plan": "basic-monthly-usd-2",
  },
  "settings": Array [],
}
`;
